# rgbd-recon

./: .gitignore  CMakeLists.txt  imgui.ini
framework/: CMakeLists.txt  LocalKinectArray.cpp  LocalKinectArray.h  NetKinectArray.cpp  NetKinectArray.h
framework/calibration/: CalibVolumes.cpp  CalibVolumes.hpp  calibration_inverter.cpp  calibration_inverter.hpp  calibration_volume.hpp  frustum.hpp  padded_calibration_volume.hpp
framework/io/: DXTCompressor.h  FeedbackReceiver.cpp  FileBuffer.cpp  FileBuffer.h
framework/navigation/: CameraNavigator.cpp
framework/reconstruction/: recon_calibs.cpp  recon_integration.cpp  recon_mc.cpp  recon_mc.hpp  recon_pc.cpp  recon_pc.cu  recon_pc.cuh  recon_pc.hpp  recon_pc_tri_table.h  reconstruction.cpp  reconstruction.hpp
framework/reconstruction/cuda/: clouds.h  copy_reference.cuh  ed_sample.cuh  fuse_data.cuh  glm.cuh  hull.cuh  mc.cuh  opticflow.cuh  pcg_solve.cuh  preprocess.cuh  recon_pc.cu  resources.cuh  sift.cuh  solve.cuh  structures.cuh  util.cuh
framework/reconstruction/cuda/MC/: marchingCubes_kernel.cuh
framework/reconstruction/cuda/OPTICFLOW/: brox_optical_flow.cu
framework/reconstruction/cuda/SIFT/: cudaImage.cuh  cudaImage.h  cudaSiftH.cuh  cudautils.h  matching.cuh
framework/rendering/: timer_database.cpp  timer_database.hpp  timer_gl.cpp  timer_gl.hpp
glsl/: fast_mc.fs  fast_mc.vs  inc_bricks.glsl  inc_mc.glsl  mc.fs  mc.gs  mc.vs  pc_bricked_mc.gs  pc_debug_correspondences.fs  pc_debug_correspondences.gs  pc_debug_correspondences.vs  pc_debug_ed_sampling.fs  pc_debug_ed_sampling.gs  pc_debug_opticflow.fs  pc_debug_reference.fs  pc_debug_reference.gs  pc_debug_reference.vs  pc_debug_reference_gradient.fs  pc_debug_reference_gradient.gs  pc_debug_reference_volume.fs  pc_debug_sorted_vertices.fs  pc_debug_sorted_vertices.gs  pc_debug_sorted_vertices_connections.gs  pc_debug_textures.fs  pc_debug_tsdf.fs  pc_debug_tsdf.gs  pc_draw_data.gs  pc_extract_reference.gs  pc_texture_blending.fs  pc_vertex_normals.fs  pre_depth.fs  tsdf_integration.vs
source/: CMakeLists.txt  FrameSequencer.cpp  FrameSequencer.h  calib_inverter.cpp  kinect_client_mc.cpp  kinect_client_pc.cpp  model.cpp  model.h  renderer.cpp  renderer.h  unit_tests.cpp
source/synthesizer/: CMakeLists.txt  Choreographer.cpp  Choreographer.h  Controller.cpp  Controller.h  Renderer.cpp  Renderer.h  assimp_utilities.h  clouds_earth.h  debug_texture.fs  main.cpp  postproc_color.fs  postproc_depth.fs  rgbd.fs  rgbd.vs  textured_quad.vs
source/synthesizer/CUDA/: cuda_calls.cuh  opticflow.cu
